Refactor to controller service pattern